# ezbar

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  TODO.md  Taskfile.yml  debian_deps.sh  deny.toml  go.mod  go.sum  main.go  rust-toolchain.toml
.claude/skills/ezbar-plugin-author/: SKILL.md
.claude/skills/ezbar-wasm-plugin-author/: SKILL.md
.githooks/: pre-commit
.github/workflows/: aur-publish.yml  ci.yml  go.yaml  release.yml
cmd/ezbar/: main.go
crates/calendar-logic/: Cargo.toml
crates/calendar-logic/src/: lib.rs  meeting.rs  zoom.rs
crates/claude-logic/: Cargo.toml
crates/claude-logic/src/: lib.rs
crates/ezbar-harness/: Cargo.toml
crates/ezbar-harness/examples/: counter.rs
crates/ezbar-harness/src/: lib.rs
crates/ezbar-plugin/: Cargo.toml
crates/ezbar-plugin-wasm/: Cargo.toml
crates/ezbar-plugin-wasm/src/: glue.rs  lib.rs
crates/ezbar-plugin-wasm/wit/since-v0.1.0/: world.wit
crates/ezbar-plugin/src/: icons.rs  lib.rs
crates/ezbar-plugin/src/ui/: graph.rs  mod.rs
crates/ezbar-wasm/: Cargo.toml
crates/ezbar-wasm/examples/: preview.rs
crates/ezbar-wasm/src/: lib.rs  manifest.rs
docs/: config-reference.md
examples/: harness.rs
go/: .gitignore  go.mod  new-plugin.sh
go/examples/clock/: main.go
go/examples/loadgauge/: README.md  main.go
go/ezbar/: ezbar.go  widget.go
go/internal/ezbar/plugin/events/: abi.go  events.wit.go
go/internal/ezbar/plugin/host/: host.wasm.go  host.wit.go
go/internal/ezbar/plugin/plugin/: abi.go  plugin.exports.go  plugin.wasm.go  plugin.wit.go
go/internal/ezbar/plugin/types/: abi.go  types.wit.go
go/internal/ezbar/plugin/ui/: abi.go  ui.wit.go
go/wit/: guest.wit
packaging/aur/: .SRCINFO  .gitignore  PKGBUILD  README.md
pkg/datasource/: calendar.go  calendar_test.go  cpu.go  github.go  interfaces.go  kubectl.go  logger.go  memory.go  ping.go  spotify.go  spotify_test.go  stock.go  system.go  temperature.go  time.go  volume.go
pkg/widget/: calendar.go  github.go  graph.go  interfaces.go  kubectl_popup.go  label.go  spotify.go  spotify_fixed.go  spotify_infinite_test.go  spotify_native.go  spotify_smooth_test.go  spotify_test.go  stock.go
presets/: catppuccin-mocha.toml  ezbar-dark.toml  gruvbox-dark.toml  noir.toml  nord.toml  tokyo-night.toml
rfcs/: 0001-pluggable-modules.md  0002-config.md  0003-builtins.md  0004-reactive-config.md  0005-separators-grouping.md  0006-wasm-plugins.md  0007-builtin-to-wasm-port.md  0008-wasm-reactor.md  0009-pointer-events.md  0010-motion.md  0011-event-driven-cadence.md  0012-host-feeds.md  0013-sway-read-capability.md  0014-plugin-registry.md  0015-capability-tiers.md  0016-clock.md  0017-popup-interaction.md  0018-wasm-input-and-components.md  0020-streaming-io-and-scratch.md  0021-responsive-retraction.md
rust/: Cargo.toml  README.md
rust/crates/ezbar-harness/: Cargo.toml
rust/crates/ezbar-harness/examples/: counter.rs
rust/crates/ezbar-harness/src/: lib.rs
rust/crates/ezbar-plugin/: Cargo.toml
rust/crates/ezbar-plugin/src/: lib.rs
rust/examples/: harness.rs
rust/src/: history.rs  lib.rs  main.rs
rust/src/modules/: claude.rs  cpu.rs  github.rs  mod.rs
rust/src/sources/: battery.rs  calendar.rs  claude.rs  github.rs  kubectl.rs  ping.rs  spotify.rs  stock.rs  sway.rs  system.rs  volume.rs
rust/src/widgets/: graph.rs
src/: config.rs  grants.rs  history.rs  install.rs  ipc.rs  lib.rs  main.rs  package.rs  registry.rs
src/modules/: battery.rs  calendar.rs  claude.rs  clock.rs  cpu.rs  custom.rs  disk.rs  github.rs  ip.rs  keyboard.rs  kubectl.rs  markup.rs  media.rs  memory.rs  mod.rs  net.rs  ping.rs  spotify.rs  stock.rs  temperature.rs  updates.rs  volume.rs  window_title.rs  workspaces.rs
src/sources/: battery.rs  calendar.rs  claude.rs  github.rs  kubectl.rs  media.rs  mod.rs  ping.rs  spotify.rs  stock.rs  sway.rs  system.rs  volume.rs
src/widgets/: graph.rs  mod.rs  workspaces.rs
wasm/: new-plugin.sh
wasm/btc/: Cargo.toml  ezbar-plugin.toml
wasm/btc/src/: lib.rs
wasm/calendar/: Cargo.toml  README.md  ezbar-plugin.toml
wasm/calendar/src/: lib.rs
wasm/claude/: Cargo.toml  ezbar-plugin.toml
wasm/claude/src/: lib.rs
wasm/fstest/: Cargo.toml
wasm/fstest/src/: lib.rs
wasm/host/: Cargo.toml
wasm/host/src/: main.rs
wasm/kube/: Cargo.toml  ezbar-plugin.toml
wasm/kube/src/: lib.rs
wasm/quakes/: Cargo.toml  README.md  ezbar-plugin.toml
wasm/quakes/src/: lib.rs
wasm/sysgraph/: Cargo.toml  ezbar-plugin.toml
wasm/sysgraph/src/: lib.rs
wasm/weather/: Cargo.toml  ezbar-plugin.toml
wasm/weather/src/: lib.rs
wasm/wintitle/: Cargo.toml  ezbar-plugin.toml
wasm/wintitle/src/: lib.rs
wit/since-v0.1.0/: world.wit
wit/since-v0.2.0/: world.wit
wit/since-v0.3.0/: world.wit
wit/since-v0.4.0/: world.wit
wit/since-v0.5.0/: world.wit
wit/since-v0.6.0/: world.wit
