[package]
name = "ezbar"
publish = false                  # an application, not a crates.io library
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "A GPU-rendered status bar for Sway (iced + wlr-layer-shell), with pluggable widgets."
readme = "README.md"
keywords = ["sway", "wayland", "statusbar", "wlroots", "iced"]
categories = ["gui"]

[workspace]
members = ["crates/ezbar-plugin", "crates/ezbar-harness", "crates/ezbar-wasm", "crates/claude-logic"]
# WASM plugin SDK + example plugins build for wasm32-wasip2 (RFC 0006), and the
# host's wasmtime stack is heavy — keep them out of the default `cargo build`.
exclude = ["crates/ezbar-plugin-wasm", "wasm"]

[workspace.package]
version = "0.1.13"
edition = "2021"
license = "MIT"
repository = "https://github.com/birdayz/ezbar"
authors = ["Johannes Brüderl <johannes.bruederl@gmail.com>"]

[dependencies]
ezbar-plugin = { path = "crates/ezbar-plugin" }
ezbar-wasm = { path = "crates/ezbar-wasm" }
iced = { version = "0.14", features = ["canvas", "svg", "tokio", "advanced"] }
iced_layershell = "0.18"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time", "process", "io-util"] }
chrono = { version = "0.4", features = ["clock"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
swayipc = "3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
base64 = "0.22"
toml = "0.8"
notify = "6"
log = "0.4"
env_logger = "0.11"
ical = "0.11.0"
chrono-tz = "0.10.4"
libc = "0.2"                     # malloc_trim — hand glibc's retained-free pages back to the OS
# jemalloc returns freed pages to the OS continuously (background-thread purge),
# instead of glibc hoarding them in arenas until a manual trim — flattens the bar's
# render-churn RSS sawtooth down to the working-set floor.
tikv-jemallocator = { version = "0.6", features = ["background_threads"] }
sha2 = "0.11.0"

[dev-dependencies]
# the module dev harness — used only by examples/harness.rs, so it stays out of
# the shipping bar binary's dependency graph.
ezbar-harness = { path = "crates/ezbar-harness" }

[profile.release]
opt-level = 2
