[package]
name = "claude"
version = "0.1.0"
edition = "2021"
description = "ezbar WASM plugin: Claude Code agent dashboard — running agents (waiting-for-you first), a Recount-style per-agent $/hr DPS meter derived from a stored damage log, and rate-limit bars. Reads /proc + ~/.claude (fs). No exec."

[lib]
crate-type = ["cdylib"]

[dependencies]
ezbar-plugin-wasm = { path = "../../crates/ezbar-plugin-wasm" }
claude-logic = { path = "../../crates/claude-logic" }

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
