[package]
name = "kube"
version = "0.1.0"
edition = "2021"
description = "ezbar WASM plugin: current kubectl context, via the exec capability (RFC 0015)."

[lib]
crate-type = ["cdylib"]

[dependencies]
ezbar-plugin-wasm = { path = "../../crates/ezbar-plugin-wasm" }

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
