[package]
name = "ezbar-plugin"
version = "0.1.0"
edition = "2021"
description = "Stable API surface for ezbar modules (see rfcs/0001-pluggable-modules.md)"

[dependencies]
iced = { version = "0.14", features = ["canvas", "tokio", "advanced"] }
# Re-exported as `ezbar_plugin::task::{spawn_blocking, sleep}` so modules need no
# direct tokio dependency. Runs on the host's executor (same tokio as iced).
tokio = { version = "1", features = ["rt", "time"] }
